<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cancel_sign" />

    <TextView
        android:id="@+id/tv_save"
        style="@style/blue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="@id/iv_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_cancel" />

    <TextView
        android:id="@+id/tv_importance"
        style="@style/body"
        android:textColor="?attr/colorOnPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/importance"
        app:layout_constraintStart_toStartOf="@id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

    <TextView
        android:id="@+id/tv_do_until"
        style="@style/body"
        android:textColor="?attr/colorOnPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/do_until"
        app:layout_constraintStart_toStartOf="@+id/sp_importance"
        app:layout_constraintTop_toBottomOf="@id/sp_importance" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_importance"
        style="@style/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/tv_importance"
        app:layout_constraintTop_toBottomOf="@id/tv_importance" />

    <TextView
        android:id="@+id/tv_delete"
        style="@style/important_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@id/iv_delete"
        app:layout_constraintStart_toEndOf="@id/iv_delete"
        app:layout_constraintTop_toTopOf="@id/iv_delete" />

    <TextView
        android:id="@+id/tv_date"
        android:textColor="?attr/colorOnPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_do_until"
        app:layout_constraintTop_toBottomOf="@id/tv_do_until" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="@id/tv_save"
        app:layout_constraintStart_toStartOf="@id/iv_cancel"
        app:layout_constraintTop_toBottomOf="@id/iv_cancel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_task_text"
            style="@style/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSecondary"
            android:background="?attr/colorSecondary"
            android:gravity="top"
            android:hint="@string/to_do"
            android:minHeight="150dp"
            tools:layout_editor_absoluteX="-1dp"
            tools:layout_editor_absoluteY="73dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_date"
        app:layout_constraintEnd_toEndOf="@id/tv_save"
        app:layout_constraintTop_toTopOf="@id/tv_do_until" />

    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:tint="?attr/colorError"
        app:layout_constraintStart_toStartOf="@id/tv_date"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:srcCompat="@android:drawable/ic_menu_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>